// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",0],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, no images and no audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",0],["audio",10]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, no images and 10 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",0],["audio",4300]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, no images and 4,300 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",0],["audio",10000]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, no images and over 10,000 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",0],["audio",10001]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, no images and over 10,001 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and no audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10],["audio",10]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and 10 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10],["audio",4300]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and 4,300 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10],["audio",10000]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and over 10,000 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10],["audio",10001]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and over 10,001 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",4300],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 4,300 images and no audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",4300],["audio",10]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 4,300 images and 10 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",4300],["audio",4300]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 4,300 images and 4,300 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",4300],["audio",10000]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 4,300 images and over 10,000 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",4300],["audio",10001]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 4,300 images and over 10,001 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10000],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,000 images and no audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10000],["audio",10]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,000 images and 10 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10000],["audio",4300]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,000 images and 4,300 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10000],["audio",10000]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,000 images and over 10,000 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10000],["audio",10001]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,000 images and over 10,001 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10001],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,001 images and no audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10001],["audio",10]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,001 images and 10 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10001],["audio",4300]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,001 images and 4,300 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10001],["audio",10000]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,001 images and over 10,000 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"all","resultCounts":[["image",10001],["audio",10001]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, over 10,001 images and over 10,001 audio.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"audio","resultCounts":[["audio",0],["image",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    No audio results for zack
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"audio","resultCounts":[["audio",10],["image",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    10 audio results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"audio","resultCounts":[["audio",4300],["image",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    4,300 audio results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"audio","resultCounts":[["audio",10000],["image",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    Over 10,000 audio results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"audio","resultCounts":[["audio",10001],["image",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    Over 10,001 audio results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"image","resultCounts":[["image",0],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    No image results for zack
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"image","resultCounts":[["image",10],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    10 image results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"image","resultCounts":[["image",4300],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    4,300 image results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"image","resultCounts":[["image",10000],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    Over 10,000 image results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle accessible heading {"searchType":"image","resultCounts":[["image",10001],["audio",0]]} 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    Over 10,001 image results for zack.
  
    </h1>
  </div>
</div>
`;

exports[`VSearchResultsTitle should render an h1 tag containing the correct text 1`] = `
<div>
  <div>
    <h1
      aria-hidden="true"
      class="invisible break-words md:visible heading-2 lg:heading-1 !leading-none lg:!leading-none"
    >
      
    zack
  
    </h1>
     
    <h1
      class="sr-only"
    >
      
    All results for zack, 10 images and 10 audio.
  
    </h1>
  </div>
</div>
`;
